<resources>
    <string name="app_name">Temporary name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mr. Blue</string>
    <string name="nav_header_subtitle">YashinSergey125@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">login</string>
    <string name="menu_back">Back</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="image">image</string>
    <string name="muscle_cars">Muscle cars</string>
    <string name="interior">Interior</string>
    <string name="greatest_people">Greatest people</string>
    <string name="abraham_lincoln_title">Abraham Lincoln</string>
    <string name="muscle_cars_title">Muscle Cars and American Culture</string>
    <string name="hi_tech_style_in_interior">Hi-Tech Style in Interior Design</string>
    <string name="theme_setting">Theme setting</string>
    <string name="default_android">Default android</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="brown">Brown</string>
    <string name="settings_item">Settings</string>
</resources>
