<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_muscle_cars"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/muscle_cars" />
        <item
            android:id="@+id/nav_interior"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/interior" />
        <item
            android:id="@+id/nav_greatest_people"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/greatest_people" />
        <item
            android:id="@+id/recycler_view_item"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Recycler View" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_item"/>

    </group>
</menu>
