<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_muscle_cars">

    <fragment
        android:id="@+id/nav_muscle_cars"
        android:name="com.example.temporaryname.ui.fragments.MuscleCarsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_muscle_cars" />

    <fragment
        android:id="@+id/nav_interior"
        android:name="com.example.temporaryname.ui.fragments.InteriorFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_interior" />

    <fragment
        android:id="@+id/nav_greatest_people"
        android:name="com.example.temporaryname.ui.fragments.GreatestPeopleFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_greatest_people" />

</navigation>